--- a/css/style.css
+++ b/css/style.css
@@ -70,14 +70,15 @@ html {
 
 }
 
-#loading {background-color:#000; width: 100%;height: 100%;top: 0px;left: 0px;position: fixed;display: block; z-index: 99}
+#loading {background-color:#fff; width: 100%;height: 100%;top: 0px;left: 0px;position: fixed;display: block; z-index: 99}
 .loader {
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
+  border: 10px solid #f3f3f3; /* Light grey */
+  border-top: 10px solid #6770b0; /* Blue */
   border-radius: 50%;
-  width: 120px;
-  height: 120px;
+  width: 40px;
+  height: 40px;
   animation: spin 2s linear infinite;
+	vertical-align: middle; text-align:center;
 }
 
 @keyframes spin {
