--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,15 @@ html {
   width: 40px;
   height: 40px;
   animation: spin 2s linear infinite;
-	vertical-align: middle; text-align:center;
+  position:absolute; /*it can be fixed too*/
+        left:0; right:0;
+        top:0; bottom:0;
+        margin:auto;
+
+        /*this to solve "the content will not be cut when the window is smaller than the content": */
+        max-width:100%;
+        max-height:100%;
+        overflow:auto;
 }
 
 @keyframes spin {
