--- a/css/style.css
+++ b/css/style.css
@@ -262,7 +262,7 @@ header[role="header"].header-top .navbar-fixed-top{background-color:rgba(0,0,0,1
 
 header[role="header"].header-top .navbar-fixed-top .container{ padding-top:0; position:static}
 
-header[role="header"].header-top .navbar-fixed-top h1 img{ width:30%}
+header[role="header"].header-top .navbar-fixed-top h1 img{ width:80px}
 
 header[role="header"].header-top .navbar-fixed-top nav{ padding-top:7px}
 
