로고 깔끔한걸로 변경~

--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,11 @@ html {
   100% { transform: rotate(360deg); }
 }
 
+.logostyle {
+	margin-top : 6px;
+}
+
+
 *, *:before, *:after {
 
 	-webkit-box-sizing: border-box;
