--- a/css/style.css
+++ b/css/style.css
@@ -602,7 +602,7 @@ border-bottom-right-radius: 3px;}
 
 /*== Footer ==*/
 
-.footer{ background-color:#333333; padding-top:101px; padding-bottom:104px; text-align:center}
+.footer{ background-color:#dddddd; padding-top:101px; padding-bottom:104px; text-align:center}
 
 .socil-icons a{ display:inline-block; text-align:center; color:#fff; font-size:22px; line-height:50px; width:50px; height:50px; border-radius:100%; background-color:#4a4a4a; margin:0 4.9px}
 
@@ -616,6 +616,6 @@ border-bottom-right-radius: 3px;}
 
 .footer nav a:hover{ text-decoration:none; color:#6770b0}
 
-.footer .copy{ padding:0; margin:0; color:#b6b6b6; font-size:13px; line-height:17px; font-weight:300; padding-top:7px; letter-spacing:1px}
-.footer .copy a{color:#b6b6b6;}
-.footer .fa-heart { color: #e84545; font-size: 11px; margin: 0 2px;}
+.footer .copy{ padding:0; margin:0; color:#333333; font-size:13px; line-height:17px; font-weight:300; padding-top:7px; letter-spacing:1px}
+.footer .copy a{color:#333333;}
+.footer .fa-heart { color: #6770b0; font-size: 11px; margin: 0 2px;}
