--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,7 @@ html {
 	margin-top : 6px;
 }
 
+.imgstyle {vertical-align: middle; text-align:center; max-width:100%; display:block; margin:0 auto;display: inline-block;}
 
 *, *:before, *:after {
 
