--- a/css/style.css
+++ b/css/style.css
@@ -375,8 +375,7 @@ header[role="title-page"] h2,header[role="title-page"] h2{ color:#000; font-size
 /*== Section One ==*/
 
 .section-one{
-	background: url("../images/section-one.jpg") no-repeat;
-  background-size:cover;
+	background-color: #6770b0;
 	padding-top:87px
 }
 
@@ -402,7 +401,8 @@ header[role="title-page"] h2,header[role="title-page"] h2{ color:#000; font-size
 
 /*== Section Two ==*/
 
-.section-two{ background-color:#ffffff;; margin-top:80px; overflow:hidden}
+.section-two{
+	background-color: #fff; margin-top:80px; overflow:hidden}
 
 .section-two section figure{background-position:50% 0; background-size:cover; background-repeat:no-repeat; background-attachment:fixed; min-height:593px}
 
@@ -509,6 +509,7 @@ transform:scale(1.1);}
 }
 /* Team */
 
+
 .team-pan figure{ padding:5px; border:5px solid #6770b0; overflow:hidden; background-color:#FFF;}
 
 .team-pan section:hover figure img{webkit-transform:scale(1.1);
@@ -527,7 +528,8 @@ transform:scale(1.1); opacity:0.8}
 
 /*== Section Five ==*/
 
-.section-five{ background-color:#ffffff; padding-top:80px; padding-bottom:80px}
+.section-five{ background: url("../images/section-one.jpg") no-repeat;
+background-size:cover; padding-top:80px; padding-bottom:80px}
 
 .section-five header[role="title-page"]{ padding-bottom:49px}
 
