--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -12502,7 +12502,7 @@ img.img-shadow,
     .header,
     .header.header-small,
     .header.header-transparent {
-        background: #fff;
+        background: rgba(255, 255, 255, .7);
         border-bottom: 1px solid rgba(240, 240, 240, .8);
     }
 
