이미지, 링크 색상 변경

--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -193,14 +193,14 @@ sup {
 }
 
 a {
-    color: #9aa3e3;
+    color: #222222;
     text-decoration: none;
     background-color: transparent;
     -webkit-text-decoration-skip: objects;
 }
 
 a:hover {
-    color: #0416fc;
+    color: #9aa3e3;
     text-decoration: none;
 }
 
