--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -88,7 +88,7 @@ section {
 
 body {
     margin: 0;
-    font-family: "Poppins", Arial;
+    font-family: "Roboto", "Noto Sans KR";
     font-size: .875rem;
     font-weight: 400;
     line-height: 1.8;
