loader 표시 방법 수정

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20553,6 +20553,7 @@ pre[class*="language-"] {
       display: inline-block;
       overflow: hidden;
       background: none;
+      display:none;
     }
     .ldio-nmhf9bu0h7t {
       width: 100%;
