loader spinner 모습 수정3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20537,6 +20537,7 @@ pre[class*="language-"] {
   display: inline-block;
   overflow: hidden;
   background: none;
+  display: none;
 }
 .ldio-ec10op87166 {
   width: 100%;
