loader spinner 모습 수정4

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20538,6 +20538,9 @@ pre[class*="language-"] {
   overflow: hidden;
   background: none;
   display: none;
+  position: absolute;
+  left:50%;
+  transform: translate(-50%, -50%);
 }
 .ldio-ec10op87166 {
   width: 100%;
