--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14979,12 +14979,12 @@ header {
   }
 
 @media (min-width: 1200px) {
-  .header-dark[class*="-not-top"][class*="-pinned"], 
-  .header-light[class*="-not-top"][class*="-pinned"] {padding: 0; background: #fff; }
+  .header-dark[class*="-not-top"][class*="-pinned"], .header-light[class*="-not-top"][class*="-pinned"] {padding: 0; background: #fff; }
   .header-dark[class*="-not-top"][class*="-pinned"] .navbar-logo, .header-light[class*="-not-top"][class*="-pinned"] .navbar-logo {display: none !important; }
   .header-dark[class*="-not-top"][class*="-pinned"] .navbar-logo.navbar-logo-dark, .header-light[class*="-not-top"][class*="-pinned"] .navbar-logo.navbar-logo-dark {display: block !important; }
   .header-dark[class*="-not-top"][class*="-pinned"]::before, .header-light[class*="-not-top"][class*="-pinned"]::before {-webkit-transform: translate(0, 0); -moz-transform: translate(0, 0); transform: translate(0, 0); opacity: 1; }
   .header-dark[class*="-not-top"][class*="-pinned"] .navbar-nav .nav-item .nav-link, .header-light[class*="-not-top"][class*="-pinned"] .navbar-nav .nav-item .nav-link {color: #888; }
+  .header-dark[class*="-not-top"][class*="-unpinned"] .navbar-nav .nav-item .nav-link, .header-light[class*="-not-top"][class*="-unpinned"] .navbar-nav .nav-item .nav-link {color: #888; }
   .header-dark[class*="-not-top"][class*="-pinned"] .navbar-brand, .header-light[class*="-not-top"][class*="-pinned"] .navbar-brand {color: #000; }
   }
 
